# chainsaw-ops

./: .gitignore  BACKLOG.md  CLAUDE.md  DEPLOY.md  README.md  app.py  config.py  deploy.sh  env_template.txt  migrate_db.py  purchase_orders_service.py  pyproject.toml  requirements.txt  run.sh  webhook.py  webhook.service  wsgi.py
.github/workflows/: deploy.yml
app/: __init__.py  cli.py  config.py  extensions.py  template_filters.py
app/auth/: __init__.py  abilities.py  capabilities.py  seed.py
app/models/: __init__.py  annotations.py  call_events.py  call_sensitivity.py  customer_cache.py  internal_phone.py  neto_config.py  neto_shipping.py  purchase_orders.py  reviews.py  role.py  shop_order.py  user.py
app/services/: __init__.py  c360_chat.py  c360_tools.py  cache.py  capacity_service.py  carrier_quote_service.py  customer_360_service.py  customer_cache.py  email_cache.py  kb_chat.py  kb_service.py  kb_tools.py  msl_service.py  neto_config_service.py  neto_shipping_service.py  neto_storefront_service.py  (+9 more)
docs/: bq_msl_change_decisions.sql  customer-360-catalogue.md  email-pipeline.md  internal-phone-numbers.md  kb-phase1-spec.md  sharepoint-cs-drill.md  sharepoint-deep-drill.md  sharepoint-inventory.md  sharepoint-subtree-drill.md
scripts/: cxone_active_calls_poller.py  email_backfill.py  email_pull_recent.py  email_sync.py  kb_neto_cms_ingest.py  kb_neto_pdfs_ingest.py  kb_neto_products_ingest.py  rcx_stream_server.py  rcx_stream_test_client.py  renew_rc_subscription.py
templates/: admin.html  base.html  dashboard.html  dashboard_progress.html  login.html
(+124 files in other folders)
