[project]
name = "chainsaw-ops"
version = "0.2.0"
description = "Chainsawspares Operations Command Tool"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["venv", "venv.old.py39", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
